--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 									<p>I'm currently a senior studying Computer Science at Stanford University, living in sunny Palo Alto, California. I'm also working on my Masters in CS, focusing on <b>machine learning</b> and <b>data mining</b>. I'm really interested in apply data science and software to tackle <b>tough problems</b> in the world in a variety of <b>real-life contexts</b> <!-- of Paula's life -->. I've worked on projects ranging from <a href="#oasis">improving urban livibility through network analysis</a>, <a href="#sherlocknet">uncovering trends in historical manuscript illustrations using neural networks</a>, to <a href="#facet"> building analytics tools that makes meeting better and more productive</a>. I also like to build <a href="#reversi">cool stuff</a>.</p>
 
-									<p>I am an explorer at heart. Traveling is one of my passions, and you can see some of my adventures(and misadventures) <a href="28fullmoons.tumblr.com">here</a>. In my spare time, I also enjoy beaches, swimming near beaches, AYCE KBBQ, reading, and collecting subway maps. </p>
+									<p>I am an explorer at heart. Traveling is one of my passions, and you can see some of my adventures(and misadventures) <a href="https://28fullmoons.tumblr.com">here</a>. In my spare time, I also enjoy beaches, swimming near beaches, AYCE KBBQ, reading, and collecting subway maps. </p>
 
 									<p>Love to chat to anyone about interesting ideas, so drop me a line! Connect with me on <a href="https://www.linkedin.com/in/ludazhao">LinkedIn</a> or email me at ludazhao AT cs.stanford.edu. </p>
 
@@ -128,7 +128,7 @@
 									<ul class="feature-icons">
 										<li class="fa-plane"><b>Travel Blog</b>
 											<p>
-												I semi-frequently update <a href="28fullmoons.tumblr.com">my blog</a> with my travels/musing. Here's a map detailing <a href="https://drive.google.com/open?id=1BEbyXTLNwmroPmJxmFJaSOKDtm8&usp=sharing">where I've been</a>. 
+												I semi-frequently update <a href="https://28fullmoons.tumblr.com">my blog</a> with my travels/musing. Here's a map detailing <a href="https://drive.google.com/open?id=1BEbyXTLNwmroPmJxmFJaSOKDtm8&usp=sharing">where I've been</a>. 
 											</p>
 										</li>
 <!-- 										<li class="fa-map"><b>Map Collections</b>
