--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 										</li> -->
 										<li class="fa-lightbulb-o"><b>Teaching</b>
 											<p>
-                                            Teaching rocks. I'm currently a Course Assistant for <a href="cs145.stanford.edu"> CS145: Database </a> at Stanford. I also taught as Section Leader for the CS106 program for many quarters, as well as at <a href="http://breakoutmentors.com/meet-our-mentors-luda-zhao/">BreakoutMentors</a>, teaching K-12 students how to code. I do private tutoring with kids 1-on-1 in CS and Math, so please reach out if you know someone who needs tutoring!
+                                            Teaching rocks. I'm currently a Course Assistant for <a href="http://cs145.stanford.edu"> CS145: Database </a> at Stanford. I also taught as Section Leader for the CS106 program for many quarters, as well as at <a href="http://breakoutmentors.com/meet-our-mentors-luda-zhao/">BreakoutMentors</a>, teaching K-12 students how to code. I do private tutoring with kids 1-on-1 in CS and Math, so please reach out if you know someone who needs tutoring!
 											</p>
 										</li>
 									</ul>
