--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.JPG" alt="" /></span>
+					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Luda Zhao</a></h1>
-					<p>Explorer<br />
-					in training</p>
+					<p>Explorer</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -153,39 +152,12 @@
 								</div>
 							</section>
 
-						<!-- Four -->
-<!-- 							<section id="four">
-								<div class="container">
-									<h3>Contact Me</h3>
-									<p>Have interesting ideas, look for project partners, or simply wanna chat? contact me here!</p>
-									<form method="post" action="#">
-										<div class="row uniform">
-											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="6u 12u(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										</div>
-										<div class="row uniform">
-											<div class="12u"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-										</div>
-										<div class="row uniform">
-											<div class="12u"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-										</div>
-										<div class="row uniform">
-											<div class="12u">
-												<ul class="actions">
-													<li><input type="submit" class="special" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
-								</div>
-							</section> -->
-
 
 					<section id="footer">
 						<div class="container" id="footer-container">
 							<ul class="copyright">
-								<li>&copy; Luda Zhao 2016</a></li>
+								<li>&copy; Luda Zhao 2017</li>
+                                <li>Inspired by <a href="https://html5up.net/read-only">Read Only</a> by HTML5UP</li>
 							</ul>
 						</div>
 					</section>
