--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
 										</p>
 									</header>
 
-									<p>I'm currently a Co-terminal Master's student studying Computer Science at Stanford University, living in sunny Palo Alto, California. My main interests are focused on <b>machine learning</b> and <b>data mining</b>. I'm especially interested in apply data science and software to tackle <b>tough problems</b> in the world in a variety of <b>real-life contexts</b> <!-- of Paula's life -->. I've worked on projects ranging from <a href="#oasis">improving urban
-                                        livibility through network analysis</a>, <a href="#sherlocknet">uncovering trends in historical manuscript illustrations using neural networks</a>, to <a href="#poverty">predicting poverty metrics using road typology</a>. I also like to build other <a href="#facet">cool stuff</a>.</p>
+									<p>I'm currently work as a Machine Learning Engineer at Airbnb, living in San Francisco, CA. I recently graduated from Stanford University with a combined Bachelors/Masters degree in Computer Science, and my main interests are focused on <b>deep learning</b> and <b>large-scale data mining</b>. I'm especially interested in applying the latest techniques in AI to tackle <b>tough, interdisplinary problems</b> in a variety of <b>real-life contexts</b>. I've worked on projects ranging from <a href="#oasis">improving urban livibility through network analysis</a>, <a href="#sherlocknet">uncovering trends in historical manuscript illustrations using neural networks</a>, to <a href="#poverty">predicting poverty metrics using road typology</a>. I also like to build other <a href="#facet">cool stuff</a>.</p>
 
-									<p>I am an explorer at heart. Traveling is one of my passions, and you can see some of my adventures(and misadventures) <a href="https://28fullmoons.tumblr.com">here</a>. In my spare time, I also enjoy beaches, swimming near beaches, All-you-can-eat KBBQ, reading, and collecting subway maps. </p>
+									<p>I am an explorer at heart. Traveling is one of my passions, and you can see some of my adventures(and misadventures) <a href="https://28fullmoons.com">here</a>. In my spare time, I also enjoy beaches, swimming near beaches, All-you-can-eat KBBQ, reading, and collecting subway maps. </p>
 
 									<p>Love to chat to anyone about interesting ideas, so drop me a line! Connect with me on <a href="https://www.linkedin.com/in/ludazhao">LinkedIn</a> or email me at ludazhao AT cs.stanford.edu. </p>
 
