--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 										</p>
 									</header>
 
-									<p>I'm currently work as a Software Engineer at Airbnb, living in San Francisco, CA. I recently graduated from Stanford University with a combined Bachelors/Masters degree in Computer Science, and my main interests are focused on <b>deep learning</b> and <b>large-scale data mining</b>. I'm especially interested in applying cutting-edge techniques from ML to tackle <b>tough, interdisplinary problems</b> in a variety of <b>real-life contexts</b>. I've worked on projects ranging from <a href="#oasis">improving urban livibility through network analysis</a>, <a href="#sherlocknet">uncovering trends in historical manuscript illustrations using neural networks</a>, to <a href="#poverty">predicting poverty metrics using road typology</a>. I also like to build other <a href="#facet">cool stuff</a>.</p>
+									<p>I'm currently work as a Software Engineer at Airbnb, living in San Francisco, CA. I recently graduated from Stanford University with a combined Bachelors/Masters degree in Computer Science, and my main interests are focused on <b>machine learning</b> and <b>data mining</b>. I'm especially interested in using cutting-edge techniques to tackle <b>tough, interdisplinary problems</b> in a variety of <b>real-life contexts</b>. I've worked on projects ranging from <a href="#oasis">improving urban livibility through network analysis</a>, <a href="#sherlocknet">uncovering trends in historical manuscript illustrations using neural networks</a>, to <a href="#poverty">predicting poverty metrics using road typology</a>.
 
 									<p>I am an explorer at heart. Traveling is one of my passions, and you can see some of my adventures(and misadventures) <a href="https://28fullmoons.com">here</a>. In my spare time, I also enjoy beaches, swimming near beaches, All-you-can-eat KBBQ, reading, and collecting subway maps. </p>
 
-									<p>Love to chat to anyone about interesting ideas, so drop me a line! Connect with me on <a href="https://www.linkedin.com/in/ludazhao">LinkedIn</a> or email me at ludazhao AT cs.stanford.edu. </p>
+									<p>Love to chat to anyone about interesting ideas, so drop me a line! Connect with me on <a href="https://www.linkedin.com/in/ludazhao">LinkedIn</a> or email me at luda AT cs.stanford.edu. </p>
 
 								</div>
 							</section>
@@ -65,7 +65,7 @@
 							<section id="two">
 								<div class="container projects-container">
 									<h3>Projects</h3>
-									<p>Here's some of the projects I'm currently working/have worked on before!</p>
+									<p>Here's some of the personal projects I'm currently working/have worked on before!</p>
 									<div class="features">
 										<article id="sherlocknet">
 											<a href="http://labs.bl.uk/British+Library+Labs+Competition" class="image"><img src="images/pic01.jpg" alt="" /></a>
@@ -74,25 +74,18 @@
                                                 <p>In collaboration with the British Library, we are exploring how we can apply Convolutional Neural Networks to aid art history research. We used transfer learning to provide over 20 million new tags to over 1 million book illustrations from the 1500s to the 20th century. We presented this project in London for the 2016 British Library Labs Competition and was thrilled to receive 1st place in the contest.</p>
 											</div>
 										</article>
+										<article id="oasis">
+											<a href="files/urban_oasis.pdf" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Project Urban Oasis</h4>
+												<p>Recent trends in urban design have focused on “re-humanizing” city centers by converting motor ways into pedestrian and bike-only roads. We used open-source GIS data to build road network models and applied graph network analysis to evaluate potential roads for pedestrian/bike conversions.</p>
+											</div>
+										</article>                                        
 										<article>
 											<a href="files/internship_summary.pptx" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Baidu Deep Learning Internship</h4>
 												<p>During my summer internship at Baidu Beijing, I worked on optimizing their internal deep learning framework(inspired by Caffe), which is used behind the scenes to power the search engine used by around 1 Billion people. I built automatic gradient check systems, network visualizations, and dabbled in experimentation with state-of-art deep NN models to improve accuracy. </p>
-											</div>
-										</article>
-										<article id="facet">
-											<a href="http://gofacet.com/" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Facet</h4>
-												<p>Meetings suck. Facet makes meetings better by providing real-time commands that automates task generation, delegation, and summary. In addition, Facet provide powerful analytics that helps team leads detect and stop cycle of under-productive meetings. </p>
-											</div>
-										</article>
-										<article id="oasis">
-											<a href="http://web.stanford.edu/class/cs224w/projects_2015/Utilizing_Network_Analysis_Techniques_to_Reclaim_the_Streets_of_San_Francisco.pdf" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Project Urban Oasis</h4>
-												<p>Recent trends in urban design have focused on “re-humanizing” city centers by converting motor ways into pedestrian and bike-only roads. We used open-source GIS data to build road network models and applied graph network analysis to evaluate potential roads for pedestrian/bike conversions.</p>
 											</div>
 										</article>
 										<article id="poverty">
@@ -102,18 +95,11 @@
                                                 <p>Objective poverty metrics are crucial for development, yet these data are lacking in many countries. We used publicly available OpenStreetMap data to calculate infrastructure robustness features, which are then used to predict key poverty measures for countries in sub-Saharan Africa.</p>
 											</div>
 										</article>
-<!-- 										<article>
+ 										<article>
 											<a href="http://www.ludazhao.com/city_of_cycles_Beijing/about.html" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>City of Cycles: Beijing</h4>
 												<p>City of Cycles: Beijing tells a story of an ancient city through modern web visualizations. It displays the growth of the city rings throughout the 20th century and provide interesting historical contexts along the way.</p>
-											</div>
-										</article> -->
-										<article>
-											<a href="http://cs229.stanford.edu/proj2014/Sachin%20Padmanabhan,%20Leon%20Yao,%20Luda%20Zhao,%20Timothy%20Lee,%20Topic%20Analysis%20of%20the%20FCC's%20Public%20Comments%20on%20Net%20Neutrality.pdf" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Automatic Topical Analysis of Internet Posts</h4>
-												<p>Charting public opinions in a data-driven way is a valuable part of devising public policy. In this project, we built machine learning models classifying ~1 million public comments regarding Net Neutrality to classify public sentiments and give insights on what people were thinking.</p>
 											</div>
 										</article>
 										<article id="reversi">
@@ -134,7 +120,7 @@
 									<ul class="feature-icons">
 										<li class="fa-plane"><b>Travel Blog</b>
 											<p>
-												I semi-frequently update <a href="https://28fullmoons.tumblr.com">my blog</a> with my travels/musings. Here's a map detailing <a href="https://drive.google.com/open?id=1BEbyXTLNwmroPmJxmFJaSOKDtm8&usp=sharing">where I've been</a>. 
+												I semi-frequently update <a href="https://28fullmoons.com">my blog</a> with my travels/musings. Here's a map detailing <a href="https://drive.google.com/open?id=1BEbyXTLNwmroPmJxmFJaSOKDtm8&usp=sharing">where I've been</a>. 
 											</p>
 										</li>
 <!-- 										<li class="fa-map"><b>Map Collections</b>
@@ -144,7 +130,7 @@
 										</li> -->
 										<li class="fa-lightbulb-o"><b>Teaching</b>
 											<p>
-                                            Teaching rocks. I'm currently a Course Assistant for <a href="http://cs246.stanford.edu"> CS246: Mining Massive Datasets </a> at Stanford, and I will be a TA for <a href="http://cs231n.stanford.edu"> CS231N: Convolutional Neural Network</a> Spring of 2017. I also taught as Section Leader for the CS106 program at Stanford for many quarters, as well as at <a href="http://breakoutmentors.com/meet-our-mentors-luda-zhao/">BreakoutMentors</a>, teaching K-12 students how to code. I do private tutoring with kids 1-on-1 in CS and Math, so please reach out if you know someone who needs tutoring!
+                                            Teaching rocks. I was a Course Assistant for many Stanford CS classes, including <a href="http://cs231n.stanford.edu"> CS231N: Convolutional Neural Network</a> and <a href="http://cs246.stanford.edu"> CS246: Mining Massive Datasets </a>. I also taught as Section Leader for the CS106 program at Stanford for many quarters, as well as at <a href="http://breakoutmentors.com/meet-our-mentors-luda-zhao/">BreakoutMentors</a>, teaching K-12 students how to code. I do private tutoring with kids 1-on-1 in CS and Math, so please reach out if you know someone who needs tutoring!
 											</p>
 										</li>
 									</ul>
