updated content, style tweaks

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.JPG" alt="" /></span>
 					<h1 id="logo"><a href="#">Luda Zhao</a></h1>
-					<p>Explorer</p>
+          <!-- <p>Subtitle</p> -->
 				</header>
 				<nav id="nav">
 					<ul>
@@ -46,14 +46,13 @@
 								<div class="container">
 									<header class="major">
 										<h2>	</h2>
-										<p>Hi! My name is Luda.<!--  I like programming, data, and <br /> 
-											<i class="fa fa-plane" aria-hidden="true"></i>-ing our <i class="fa fa-globe" aria-hidden="true"></i>. -->
+										<p>Hi! My name is Luda.
 										</p>
 									</header>
 
-									<p>I'm currently work as a Software Engineer at Airbnb, living in San Francisco, CA. I recently graduated from Stanford University with a combined Bachelors/Masters degree in Computer Science, and my main interests are focused on <b>machine learning</b> and <b>data mining</b>. I'm especially interested in using cutting-edge techniques to tackle <b>tough, interdisplinary problems</b> in a variety of <b>real-life contexts</b>. I've worked on projects ranging from <a href="#oasis">improving urban livibility through network analysis</a>, <a href="#sherlocknet">uncovering trends in historical manuscript illustrations using neural networks</a>, to <a href="#poverty">predicting poverty metrics using road typology</a>.
+									<p>I'm currently work as a Software Engineer at Airbnb, living in San Francisco, CA. Before that, I got my Masters from Stanford University in Computer Science, with a focus on <b>data mining</b>. I'm especially interested in using cutting-edge data techniques to tackle <b>tough, interdisplinary problems</b> in a variety of <b>real-life contexts</b>. I've worked on projects ranging from <a href="#oasis">improving urban livibility through network analysis</a>, <a href="#sherlocknet">uncovering trends in historical manuscript illustrations using neural networks</a>, to <a href="#poverty">predicting poverty metrics using road typology</a>.
 
-									<p>I am an explorer at heart. Traveling is one of my passions, and you can see some of my adventures(and misadventures) <a href="https://28fullmoons.com">here</a>. In my spare time, I also enjoy beaches, swimming near beaches, All-you-can-eat KBBQ, reading, and collecting subway maps. </p>
+									<p>I am an explorer at heart. Traveling is one of my passions, and you can see some of my adventures(and misadventures) <a href="https://ludazhao.com/blog">here</a>. In my spare time, I also enjoy beaches, swimming near beaches, All-you-can-eat KBBQ, reading, and collecting subway maps. </p>
 
 									<p>Love to chat to anyone about interesting ideas, so drop me a line! Connect with me on <a href="https://www.linkedin.com/in/ludazhao">LinkedIn</a> or email me at luda AT cs.stanford.edu. </p>
 
@@ -65,7 +64,7 @@
 							<section id="two">
 								<div class="container projects-container">
 									<h3>Projects</h3>
-									<p>Here's some of the personal projects I'm currently working/have worked on before!</p>
+									<p>Here are some cool projects I'm currently working/have worked on before!</p>
 									<div class="features">
 										<article id="sherlocknet">
 											<a href="http://labs.bl.uk/British+Library+Labs+Competition" class="image"><img src="images/pic01.jpg" alt="" /></a>
@@ -80,7 +79,7 @@
 												<h4>Project Urban Oasis</h4>
 												<p>Recent trends in urban design have focused on “re-humanizing” city centers by converting motor ways into pedestrian and bike-only roads. We used open-source GIS data to build road network models and applied graph network analysis to evaluate potential roads for pedestrian/bike conversions.</p>
 											</div>
-										</article>                                        
+										</article>
 										<article>
 											<a href="files/internship_summary.pptx" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
@@ -93,13 +92,6 @@
 											<div class="inner">
                                                 <h4>OpenStreetMap Road Network Analysis for Poverty Mapping</h4>
                                                 <p>Objective poverty metrics are crucial for development, yet these data are lacking in many countries. We used publicly available OpenStreetMap data to calculate infrastructure robustness features, which are then used to predict key poverty measures for countries in sub-Saharan Africa.</p>
-											</div>
-										</article>
- 										<article>
-											<a href="http://www.ludazhao.com/city_of_cycles_Beijing/about.html" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>City of Cycles: Beijing</h4>
-												<p>City of Cycles: Beijing tells a story of an ancient city through modern web visualizations. It displays the growth of the city rings throughout the 20th century and provide interesting historical contexts along the way.</p>
 											</div>
 										</article>
 										<article id="reversi">
@@ -120,12 +112,12 @@
 									<ul class="feature-icons">
 										<li class="fa-plane"><b>Travel Blog</b>
 											<p>
-												I semi-frequently update <a href="https://28fullmoons.com">my blog</a> with my travels/musings. Here's a map detailing <a href="https://drive.google.com/open?id=1BEbyXTLNwmroPmJxmFJaSOKDtm8&usp=sharing">where I've been</a>. 
+												I semi-frequently update <a href="https://ludazhao.com/blog">my blog</a> with my travels/musings. Here's a map detailing <a href="https://drive.google.com/open?id=1BEbyXTLNwmroPmJxmFJaSOKDtm8&usp=sharing">where I've been</a>.
 											</p>
 										</li>
 <!-- 										<li class="fa-map"><b>Map Collections</b>
 											<p>
-												I keep a collection of interesting, informational, and aethestically pleasing maps. I also like to create one from time to time. Go <a href=www.cartographicexpressions.com> here</a> to see what kind of maps I found interesting. 
+												I keep a collection of interesting, informational, and aethestically pleasing maps. I also like to create one from time to time. Go <a href=www.cartographicexpressions.com> here</a> to see what kind of maps I found interesting.
 											</p>
 										</li> -->
 										<li class="fa-lightbulb-o"><b>Teaching</b>
@@ -141,7 +133,7 @@
 					<section id="footer">
 						<div class="container" id="footer-container">
 							<ul class="copyright">
-								<li>&copy; Luda Zhao 2017</li>
+								<li>&copy; Luda Zhao 2018</li>
                                 <li>Inspired by <a href="https://html5up.net/read-only">Read Only</a> by HTML5UP</li>
 							</ul>
 						</div>
