--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Projects</a></li>
-						<li><a href="#three">More Cool Stuff</a></li>
+						<li><a href="#two">Past Projects</a></li>
+						<li><a href="#three">Other Stuff</a></li>
 <!-- 						<li><a href="#four">Contact</a></li>
  -->					</ul>
 				</nav>
@@ -50,9 +50,9 @@
 										</p>
 									</header>
 
-									<p>I'm currently work as a Software Engineer at Airbnb, living in San Francisco, CA. Before that, I got my Masters from Stanford University in Computer Science, with a focus on <b>data mining</b>. I'm especially interested in using cutting-edge data techniques to tackle <b>tough, interdisplinary problems</b> in a variety of <b>real-life contexts</b>. I've worked on projects ranging from <a href="#oasis">improving urban livibility through network analysis</a>, <a href="#sherlocknet">uncovering trends in historical manuscript illustrations using neural networks</a>, to <a href="#poverty">predicting poverty metrics using road typology</a>.
+									<p>I'm currently work as a Software Engineer at Airbnb, living in San Francisco, CA. Before that, I got my Masters from Stanford University in Computer Science, with a focus on <b>machine learning</b> and <b>data mining</b>. I'm especially interested in using software and data mining to tackle <b>tough, interdisplinary problems</b> in a variety of contexts. Some of the past projects I've worked on ranges from <a href="#sherlocknet">art history research</a>, <a href="#oasis">urban planning analysis</a>, and <a href="#poverty">poverty mapping in rural Africa</a>.</p>
 
-									<p>I am an explorer at heart. Traveling is one of my passions, and you can see some of my adventures(and misadventures) <a href="https://ludazhao.com/blog">here</a>. In my spare time, I also enjoy beaches, swimming near beaches, All-you-can-eat KBBQ, reading, and collecting subway maps. </p>
+									<p> In my spare time, I also enjoy reading, beaches, swimming near beaches, All-you-can-eat KBBQ, and collecting subway maps. Traveling is also one of my passions, and I maintain a blog documenting some of my adventures(and misadventures) <a href="https://ludazhao.com/blog">here</a>.  </p>
 
 									<p>Love to chat to anyone about interesting ideas, so drop me a line! Connect with me on <a href="https://www.linkedin.com/in/ludazhao">LinkedIn</a> or email me at luda AT cs.stanford.edu. </p>
 
@@ -63,14 +63,14 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container projects-container">
-									<h3>Projects</h3>
-									<p>Here are some cool projects I'm currently working/have worked on before!</p>
+									<h3>Past Projects</h3>
+									<p>Here are some of the past passion projects I've worked on before, in rough chronological order. </p>
 									<div class="features">
 										<article id="sherlocknet">
 											<a href="http://labs.bl.uk/British+Library+Labs+Competition" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>SherlockNet</h4>
-                                                <p>In collaboration with the British Library, we are exploring how we can apply Convolutional Neural Networks to aid art history research. We used transfer learning to provide over 20 million new tags to over 1 million book illustrations from the 1500s to the 20th century. We presented this project in London for the 2016 British Library Labs Competition and was thrilled to receive 1st place in the contest.</p>
+                                                <p>In collaboration with the British Library, we explored how we can apply Convolutional Neural Networks to aid art history research. We used transfer learning to provide over 20 million new tags to over 1 million book illustrations from the 1500s to the 20th century. We presented this project in London for the 2016 British Library Labs Competition and was thrilled to receive 1st place in the contest.</p>
 											</div>
 										</article>
 										<article id="oasis">
@@ -115,16 +115,16 @@
 												I semi-frequently update <a href="https://ludazhao.com/blog">my blog</a> with my travels/musings. Here's a map detailing <a href="https://drive.google.com/open?id=1BEbyXTLNwmroPmJxmFJaSOKDtm8&usp=sharing">where I've been</a>.
 											</p>
 										</li>
-<!-- 										<li class="fa-map"><b>Map Collections</b>
+										<li class="fa-map"><b>Map Collection</b>
 											<p>
 												I keep a collection of interesting, informational, and aethestically pleasing maps. I also like to create one from time to time. Go <a href=www.cartographicexpressions.com> here</a> to see what kind of maps I found interesting.
 											</p>
-										</li> -->
-										<li class="fa-lightbulb-o"><b>Teaching</b>
+										</li>
+<!-- 										<li class="fa-lightbulb-o"><b>Teaching</b>
 											<p>
                                             Teaching rocks. I was a Course Assistant for many Stanford CS classes, including <a href="http://cs231n.stanford.edu"> CS231N: Convolutional Neural Network</a> and <a href="http://cs246.stanford.edu"> CS246: Mining Massive Datasets </a>. I also taught as Section Leader for the CS106 program at Stanford for many quarters, as well as at <a href="http://breakoutmentors.com/meet-our-mentors-luda-zhao/">BreakoutMentors</a>, teaching K-12 students how to code. I do private tutoring with kids 1-on-1 in CS and Math, so please reach out if you know someone who needs tutoring!
 											</p>
-										</li>
+										</li> -->
 									</ul>
 								</div>
 							</section>
@@ -133,7 +133,7 @@
 					<section id="footer">
 						<div class="container" id="footer-container">
 							<ul class="copyright">
-								<li>&copy; Luda Zhao 2018</li>
+								<li>&copy; Luda Zhao 2019</li>
                                 <li>Inspired by <a href="https://html5up.net/read-only">Read Only</a> by HTML5UP</li>
 							</ul>
 						</div>
