--- a/index.html
+++ b/index.html
@@ -22,15 +22,13 @@
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Past Projects</a></li>
 						<li><a href="#three">Other Stuff</a></li>
-<!-- 						<li><a href="#four">Contact</a></li>
- -->					</ul>
+					</ul>
 				</nav>
 				<footer>
 					<ul class="icons">
 						<li><a href="https://www.facebook.com/luda.zhao.3" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.linkedin.com/in/ludazhao" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/ludazhao" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://www.instagram.com/luda_zhao" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -50,11 +48,11 @@
 										</p>
 									</header>
 
-									<p>I'm currently work as a Software Engineer at Airbnb, living in San Francisco, CA. Before that, I got my Masters from Stanford University in Computer Science, with a focus on <b>machine learning</b> and <b>data mining</b>. I'm especially interested in using software and data mining to tackle <b>tough, interdisplinary problems</b> in a variety of contexts. Some of the past projects I've worked on ranges from <a href="#sherlocknet">art history research</a>, <a href="#oasis">urban planning analysis</a>, and <a href="#poverty">poverty mapping in rural Africa</a>.</p>
+									<p>I'm currently work as a Software Engineer at <a href="https://www.sidewalklabs.com/">Sidewalk Labs</a>, building software to re-imagine holistic urban planning through <a href="https://hello.delve.sidewalklabs.com/">computational approaches</a>. I'm especially interested in using software and data mining to tackle <b>tough, interdisplinary problems</b> in a variety of real-world contexts. Some of the other past projects I've worked on ranges from <a href="#sherlocknet">computational art history research</a> to <a href="#poverty">geo-mapping poverty in rural Africa</a>.
 
-									<p> In my spare time, I also enjoy reading, beaches, swimming near beaches, All-you-can-eat KBBQ, and collecting subway maps. Traveling is also one of my passions, and I maintain a blog documenting some of my adventures(and misadventures) <a href="https://ludazhao.com/blog">here</a>.  </p>
+									<p> In my spare time, I also enjoy reading, beaches, swimming near beaches, All-you-can-eat KBBQ, and collecting subway maps. Traveling is also one of my passions, and I maintain a blog documenting some of my adventures(and misadventures) <a href="https://ludazhao.com/blog">here</a>.</p>
 
-									<p>Love to chat to anyone about interesting ideas, so drop me a line! Connect with me on <a href="https://www.linkedin.com/in/ludazhao">LinkedIn</a> or email me at luda AT cs.stanford.edu. </p>
+									<p>Love to chat to anyone about interesting ideas, so drop me a line! Connect with me on <a href="https://www.linkedin.com/in/ludazhao">LinkedIn</a> or email me at luda AT cs.stanford.edu. </p>I'm currently based in New York City.</p> 
 
 								</div>
 							</section>
@@ -64,7 +62,7 @@
 							<section id="two">
 								<div class="container projects-container">
 									<h3>Past Projects</h3>
-									<p>Here are some of the past passion projects I've worked on before, in rough chronological order. </p>
+									<p>Here are a random smattering of interesting past projects I've worked on before, in rough chronological order. </p>
 									<div class="features">
 										<article id="sherlocknet">
 											<a href="http://labs.bl.uk/British+Library+Labs+Competition" class="image"><img src="images/pic01.jpg" alt="" /></a>
@@ -78,13 +76,6 @@
 											<div class="inner">
 												<h4>Project Urban Oasis</h4>
 												<p>Recent trends in urban design have focused on “re-humanizing” city centers by converting motor ways into pedestrian and bike-only roads. We used open-source GIS data to build road network models and applied graph network analysis to evaluate potential roads for pedestrian/bike conversions.</p>
-											</div>
-										</article>
-										<article>
-											<a href="files/internship_summary.pptx" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Baidu Deep Learning Internship</h4>
-												<p>During my summer internship at Baidu Beijing, I worked on optimizing their internal deep learning framework(inspired by Caffe), which is used behind the scenes to power the search engine used by around 1 Billion people. I built automatic gradient check systems, network visualizations, and dabbled in experimentation with state-of-art deep NN models to improve accuracy. </p>
 											</div>
 										</article>
 										<article id="poverty">
@@ -120,11 +111,6 @@
 												I keep a collection of interesting, informational, and aethestically pleasing maps. I also like to create one from time to time. Go <a href=www.cartographicexpressions.com> here</a> to see what kind of maps I found interesting.
 											</p>
 										</li>
-<!-- 										<li class="fa-lightbulb-o"><b>Teaching</b>
-											<p>
-                                            Teaching rocks. I was a Course Assistant for many Stanford CS classes, including <a href="http://cs231n.stanford.edu"> CS231N: Convolutional Neural Network</a> and <a href="http://cs246.stanford.edu"> CS246: Mining Massive Datasets </a>. I also taught as Section Leader for the CS106 program at Stanford for many quarters, as well as at <a href="http://breakoutmentors.com/meet-our-mentors-luda-zhao/">BreakoutMentors</a>, teaching K-12 students how to code. I do private tutoring with kids 1-on-1 in CS and Math, so please reach out if you know someone who needs tutoring!
-											</p>
-										</li> -->
 									</ul>
 								</div>
 							</section>
@@ -133,7 +119,7 @@
 					<section id="footer">
 						<div class="container" id="footer-container">
 							<ul class="copyright">
-								<li>&copy; Luda Zhao 2019</li>
+								<li>&copy; Luda Zhao 2020</li>
                                 <li>Inspired by <a href="https://html5up.net/read-only">Read Only</a> by HTML5UP</li>
 							</ul>
 						</div>
