--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
 									<p>I'm currently work as a Software Engineer at <a href="https://www.sidewalklabs.com/">Sidewalk Labs</a>, building software to re-imagine holistic urban planning through <a href="https://hello.delve.sidewalklabs.com/">computational approaches</a>. I'm especially interested in using software and data mining to tackle <b>tough, interdisplinary problems</b> in a variety of real-world contexts. Some of the other past projects I've worked on ranges from <a href="#sherlocknet">computational art history research</a> to <a href="#poverty">geo-mapping poverty in rural Africa</a>.
 
-									<p> In my spare time, I also enjoy reading, beaches, swimming near beaches, All-you-can-eat KBBQ, and collecting subway maps. Traveling is also one of my passions, and I maintain a blog documenting some of my adventures(and misadventures) <a href="https://ludazhao.com/blog">here</a>.</p>
+									<p> In my spare time, I enjoy reading, beaches, All-you-can-eat KBBQ, and collecting subway maps. Traveling is also one of my passions, and I maintain a blog documenting some of my adventures(and misadventures) <a href="https://ludazhao.com/blog">here</a>.</p>
 
-									<p>Love to chat to anyone about interesting ideas, so drop me a line! Connect with me on <a href="https://www.linkedin.com/in/ludazhao">LinkedIn</a> or email me at luda AT cs.stanford.edu. </p>I'm currently based in New York City.</p> 
+									<p>Love to chat to anyone about interesting ideas, so drop me a line! Connect with me on <a href="https://www.linkedin.com/in/ludazhao">LinkedIn</a> or email me at luda AT cs.stanford.edu. I'm currently based in New York City.</p> 
 
 								</div>
 							</section>
